// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Services table component redirects to the correct URL when the service link is clicked 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Services
            </span>
            <span
              class="panel-title-count"
            >
               (1)
            </span>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <span
                class="euiToolTipAnchor"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty-isDisabled"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Filter services
                    </span>
                  </span>
                </button>
              </span>
            </div>
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Show 24 hour trends
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiBasicTable"
      >
        <div>
          <div
            class="euiTableHeaderMobile"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiCheckbox"
                >
                  <input
                    aria-label="Select all rows"
                    class="euiCheckbox__input"
                    id="_selection_column-checkbox_random_html_id"
                    type="checkbox"
                  />
                  <div
                    class="euiCheckbox__square"
                  />
                  <label
                    class="euiCheckbox__label"
                    for="_selection_column-checkbox_random_html_id"
                  >
                    Select all rows
                  </label>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiTableSortMobile"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownRight"
                  >
                    <div
                      class="euiPopover__anchor"
                    >
                      <button
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                              fill-rule="non-zero"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text"
                          >
                            Sorting
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <table
            class="euiTable euiTable--responsive euiTable--auto"
            id="random_html_id"
            tabindex="-1"
          >
            <caption
              class="euiScreenReaderOnly euiTableCaption"
            />
            <thead>
              <tr>
                <th
                  class="euiTableHeaderCellCheckbox"
                  scope="col"
                >
                  <div
                    class="euiTableCellContent"
                  >
                    <div
                      class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                    >
                      <input
                        aria-label="Select all rows"
                        class="euiCheckbox__input"
                        data-test-subj="checkboxSelectAll"
                        id="_selection_column-checkbox_random_html_id"
                        type="checkbox"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                    </div>
                  </div>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="ascending"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_name_0"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Name"
                      >
                        Name
                      </span>
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiTableSortIcon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 4.207v8.237c0 .307-.224.556-.5.556s-.5-.249-.5-.556V4.207L2.904 8.303a.5.5 0 0 1-.707-.707l4.242-4.242a1.5 1.5 0 0 1 2.122 0l4.242 4.242a.5.5 0 1 1-.707.707L8 4.207Z"
                        />
                      </svg>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_average_latency_1"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Average duration (ms)"
                      >
                        Average duration (ms)
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_error_rate_2"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Error rate"
                      >
                        Error rate
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_throughput_3"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Request rate"
                      >
                        Request rate
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_number_of_connected_services_4"
                  role="columnheader"
                  scope="col"
                  style="width: 80px;"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="No. of connected services"
                      >
                        No. of connected services
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_connected_services_5"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Connected services"
                      >
                        Connected services
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_traces_6"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Traces"
                      >
                        Traces
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_actions_7"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    class="euiTableCellContent euiTableCellContent--alignCenter"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Actions"
                    >
                      Actions
                    </span>
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="euiTableRow euiTableRow-isSelectable"
              >
                <td
                  class="euiTableRowCellCheckbox"
                >
                  <div
                    class="euiTableCellContent"
                  >
                    <div
                      class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                    >
                      <input
                        aria-label="Select this row"
                        class="euiCheckbox__input"
                        data-test-subj="checkboxSelectRow-1"
                        id="_selection_column_1-checkbox"
                        title="Select this row"
                        type="checkbox"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Name
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--overflowingContent"
                  >
                    <button
                      class="euiLink euiLink--primary"
                      data-test-subj="service-link"
                      type="button"
                    >
                      checkoutservice
                    </button>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Average duration (ms)
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            100
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Error rate
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            <div
                              class="euiText euiText--small"
                            >
                              0.5%
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Request rate
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            200
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                  style="width: 80px;"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    No. of connected services
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    -
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Connected services
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    -
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Traces
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    10
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Actions
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignCenter euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-flyout-action-btn1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.363 14.658a.5.5 0 1 1-.713.7l-2.97-3.023a.5.5 0 0 1 .001-.7A3.9 3.9 0 1 0 8.9 12.8a.5.5 0 1 1 0 .999 4.9 4.9 0 1 1 3.821-1.833l2.642 2.691ZM3.094 13a.5.5 0 1 1 0 1H2.5A2.5 2.5 0 0 1 0 11.5v-9A2.5 2.5 0 0 1 2.5 0h9A2.5 2.5 0 0 1 14 2.5v.599a.5.5 0 1 1-1 0V2.5A1.5 1.5 0 0 0 11.5 1h-9A1.5 1.5 0 0 0 1 2.5v9A1.5 1.5 0 0 0 2.5 13h.594ZM2.5 3a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-4 2a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-2 1a.5.5 0 1 1 0 1 .5.5 0 0 1 0-1Zm0 3a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm6-6a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-8 8a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-traces-redirection-btn1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M2 0h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2Zm0 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2Zm.5 2h10a.5.5 0 1 1 0 1h-10a.5.5 0 0 1 0-1Zm1 3h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1 0-1Zm2 3h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1 0-1Zm3 3h5a.5.5 0 1 1 0 1h-5a.5.5 0 1 1 0-1Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-logs-redirection-btn1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary"
                              focusable="false"
                              height="32"
                              role="img"
                              viewBox="0 0 32 32"
                              width="32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                class="euiIcon__fillSecondary"
                                d="m8.33 23.67 4.79-10.55 10.55-4.79-4.79 10.55-10.55 4.79Zm6.3-9-2.28 5 5-2.28 2.28-5-5 2.28Z"
                              />
                              <path
                                d="M16 0C7.163 0 0 7.163 0 16s7.163 16 16 16 16-7.163 16-16A16 16 0 0 0 16 0Zm1 29.95V28h-2v1.95A14 14 0 0 1 2.05 17H4v-2H2.05A14 14 0 0 1 15 2.05V4h2V2.05A14 14 0 0 1 29.95 15H28v2h1.95A14 14 0 0 1 17 29.95Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorUpRight"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                    data-test-subj="tablePaginationPopoverButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        Rows per page
                        : 
                        10
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <nav
                class="euiPagination"
              >
                <button
                  aria-label="Previous page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-previous"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.843 13.069 6.232 8.384a.546.546 0 0 1 0-.768l4.61-4.685a.552.552 0 0 0 0-.771.53.53 0 0 0-.759 0l-4.61 4.684a1.65 1.65 0 0 0 0 2.312l4.61 4.684a.53.53 0 0 0 .76 0 .552.552 0 0 0 0-.771Z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
                <ul
                  class="euiPagination__list"
                >
                  <li
                    class="euiPagination__item"
                  >
                    <button
                      aria-controls="random_html_id"
                      aria-current="true"
                      aria-label="Page 1 of 1"
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                      data-test-subj="pagination-button-0"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonEmpty__content"
                      >
                        <span
                          class="euiButtonEmpty__text"
                        >
                          1
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
                <button
                  aria-label="Next page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-next"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Services table component renders empty jaeger services table message 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Services
            </span>
            <span
              class="panel-title-count"
            >
               (0)
            </span>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <span
                class="euiToolTipAnchor"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty-isDisabled"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Filter services
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiSpacer euiSpacer--xl"
      />
      <div
        class="euiEmptyPrompt"
      >
        <h2
          class="euiTitle euiTitle--medium"
        >
          No matches
        </h2>
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiText euiText--small"
            >
              No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
            </div>
          </div>
        </span>
      </div>
      <div
        class="euiSpacer euiSpacer--xl"
      />
    </div>
  </div>
</body>
`;

exports[`Services table component renders empty services table message 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Services
            </span>
            <span
              class="panel-title-count"
            >
               (0)
            </span>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <span
                class="euiToolTipAnchor"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty-isDisabled"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Filter services
                    </span>
                  </span>
                </button>
              </span>
            </div>
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Show 24 hour trends
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiSpacer euiSpacer--xl"
      />
      <div
        class="euiEmptyPrompt"
      >
        <h2
          class="euiTitle euiTitle--medium"
        >
          No matches
        </h2>
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiText euiText--small"
            >
              No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
               
              Configure your custom indexes in
               
              <button
                class="euiLink euiLink--primary"
                type="button"
              >
                advanced settings
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="euiSpacer euiSpacer--xl"
      />
    </div>
  </div>
</body>
`;

exports[`Services table component renders jaeger services table 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Services
            </span>
            <span
              class="panel-title-count"
            >
               (1)
            </span>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <span
                class="euiToolTipAnchor"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty-isDisabled"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Filter services
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiBasicTable"
      >
        <div>
          <div
            class="euiTableHeaderMobile"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiCheckbox"
                >
                  <input
                    aria-label="Select all rows"
                    class="euiCheckbox__input"
                    id="_selection_column-checkbox_random_html_id"
                    type="checkbox"
                  />
                  <div
                    class="euiCheckbox__square"
                  />
                  <label
                    class="euiCheckbox__label"
                    for="_selection_column-checkbox_random_html_id"
                  >
                    Select all rows
                  </label>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiTableSortMobile"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownRight"
                  >
                    <div
                      class="euiPopover__anchor"
                    >
                      <button
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                              fill-rule="non-zero"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text"
                          >
                            Sorting
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <table
            class="euiTable euiTable--responsive euiTable--auto"
            id="random_html_id"
            tabindex="-1"
          >
            <caption
              class="euiScreenReaderOnly euiTableCaption"
            />
            <thead>
              <tr>
                <th
                  class="euiTableHeaderCellCheckbox"
                  scope="col"
                >
                  <div
                    class="euiTableCellContent"
                  >
                    <div
                      class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                    >
                      <input
                        aria-label="Select all rows"
                        class="euiCheckbox__input"
                        data-test-subj="checkboxSelectAll"
                        id="_selection_column-checkbox_random_html_id"
                        type="checkbox"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                    </div>
                  </div>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="ascending"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_name_0"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Name"
                      >
                        Name
                      </span>
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiTableSortIcon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 4.207v8.237c0 .307-.224.556-.5.556s-.5-.249-.5-.556V4.207L2.904 8.303a.5.5 0 0 1-.707-.707l4.242-4.242a1.5 1.5 0 0 1 2.122 0l4.242 4.242a.5.5 0 1 1-.707.707L8 4.207Z"
                        />
                      </svg>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_average_latency_1"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Average duration (ms)"
                      >
                        Average duration (ms)
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_error_rate_2"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Error rate"
                      >
                        Error rate
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_throughput_3"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Request rate"
                      >
                        Request rate
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_traces_4"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Traces"
                      >
                        Traces
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_actions_5"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    class="euiTableCellContent euiTableCellContent--alignCenter"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Actions"
                    >
                      Actions
                    </span>
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="euiTableRow euiTableRow-isSelectable"
              >
                <td
                  class="euiTableRowCellCheckbox"
                >
                  <div
                    class="euiTableCellContent"
                  >
                    <div
                      class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                    >
                      <input
                        aria-label="Select this row"
                        class="euiCheckbox__input"
                        data-test-subj="checkboxSelectRow-0"
                        id="_selection_column_0-checkbox"
                        title="Select this row"
                        type="checkbox"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Name
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--overflowingContent"
                  >
                    <button
                      class="euiLink euiLink--primary"
                      data-test-subj="service-link"
                      type="button"
                    >
                      database
                    </button>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Average duration (ms)
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            49.54
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Error rate
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            <div
                              class="euiText euiText--small"
                            >
                              3.77%
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Request rate
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            53
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Traces
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    31
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Actions
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignCenter euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-flyout-action-btnundefined"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.363 14.658a.5.5 0 1 1-.713.7l-2.97-3.023a.5.5 0 0 1 .001-.7A3.9 3.9 0 1 0 8.9 12.8a.5.5 0 1 1 0 .999 4.9 4.9 0 1 1 3.821-1.833l2.642 2.691ZM3.094 13a.5.5 0 1 1 0 1H2.5A2.5 2.5 0 0 1 0 11.5v-9A2.5 2.5 0 0 1 2.5 0h9A2.5 2.5 0 0 1 14 2.5v.599a.5.5 0 1 1-1 0V2.5A1.5 1.5 0 0 0 11.5 1h-9A1.5 1.5 0 0 0 1 2.5v9A1.5 1.5 0 0 0 2.5 13h.594ZM2.5 3a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-4 2a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-2 1a.5.5 0 1 1 0 1 .5.5 0 0 1 0-1Zm0 3a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm6-6a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-8 8a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-traces-redirection-btnundefined"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M2 0h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2Zm0 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2Zm.5 2h10a.5.5 0 1 1 0 1h-10a.5.5 0 0 1 0-1Zm1 3h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1 0-1Zm2 3h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1 0-1Zm3 3h5a.5.5 0 1 1 0 1h-5a.5.5 0 1 1 0-1Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorUpRight"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                    data-test-subj="tablePaginationPopoverButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        Rows per page
                        : 
                        10
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <nav
                class="euiPagination"
              >
                <button
                  aria-label="Previous page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-previous"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.843 13.069 6.232 8.384a.546.546 0 0 1 0-.768l4.61-4.685a.552.552 0 0 0 0-.771.53.53 0 0 0-.759 0l-4.61 4.684a1.65 1.65 0 0 0 0 2.312l4.61 4.684a.53.53 0 0 0 .76 0 .552.552 0 0 0 0-.771Z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
                <ul
                  class="euiPagination__list"
                >
                  <li
                    class="euiPagination__item"
                  >
                    <button
                      aria-controls="random_html_id"
                      aria-current="true"
                      aria-label="Page 1 of 1"
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                      data-test-subj="pagination-button-0"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonEmpty__content"
                      >
                        <span
                          class="euiButtonEmpty__text"
                        >
                          1
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
                <button
                  aria-label="Next page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-next"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Services table component renders services table 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Services
            </span>
            <span
              class="panel-title-count"
            >
               (1)
            </span>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <span
                class="euiToolTipAnchor"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty-isDisabled"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Filter services
                    </span>
                  </span>
                </button>
              </span>
            </div>
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Show 24 hour trends
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiBasicTable"
      >
        <div>
          <div
            class="euiTableHeaderMobile"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiCheckbox"
                >
                  <input
                    aria-label="Select all rows"
                    class="euiCheckbox__input"
                    id="_selection_column-checkbox_random_html_id"
                    type="checkbox"
                  />
                  <div
                    class="euiCheckbox__square"
                  />
                  <label
                    class="euiCheckbox__label"
                    for="_selection_column-checkbox_random_html_id"
                  >
                    Select all rows
                  </label>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiTableSortMobile"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownRight"
                  >
                    <div
                      class="euiPopover__anchor"
                    >
                      <button
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text"
                          >
                            Sorting
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <table
            class="euiTable euiTable--responsive euiTable--auto"
            id="random_html_id"
            tabindex="-1"
          >
            <caption
              class="euiScreenReaderOnly euiTableCaption"
            />
            <thead>
              <tr>
                <th
                  class="euiTableHeaderCellCheckbox"
                  scope="col"
                >
                  <div
                    class="euiTableCellContent"
                  >
                    <div
                      class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                    >
                      <input
                        aria-label="Select all rows"
                        class="euiCheckbox__input"
                        data-test-subj="checkboxSelectAll"
                        id="_selection_column-checkbox_random_html_id"
                        type="checkbox"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                    </div>
                  </div>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="ascending"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_name_0"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Name"
                      >
                        Name
                      </span>
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoading euiTableSortIcon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_average_latency_1"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Average duration (ms)"
                      >
                        Average duration (ms)
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_error_rate_2"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Error rate"
                      >
                        Error rate
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_throughput_3"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Request rate"
                      >
                        Request rate
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_number_of_connected_services_4"
                  role="columnheader"
                  scope="col"
                  style="width: 80px;"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="No. of connected services"
                      >
                        No. of connected services
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_connected_services_5"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Connected services"
                      >
                        Connected services
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_traces_6"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Traces"
                      >
                        Traces
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_actions_7"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    class="euiTableCellContent euiTableCellContent--alignCenter"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Actions"
                    >
                      Actions
                    </span>
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="euiTableRow euiTableRow-isSelectable"
              >
                <td
                  class="euiTableRowCellCheckbox"
                >
                  <div
                    class="euiTableCellContent"
                  >
                    <div
                      class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                    >
                      <input
                        aria-label="Select this row"
                        class="euiCheckbox__input"
                        data-test-subj="checkboxSelectRow-0"
                        id="_selection_column_0-checkbox"
                        title="Select this row"
                        type="checkbox"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Name
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--overflowingContent"
                  >
                    <button
                      class="euiLink euiLink--primary"
                      data-test-subj="service-link"
                      type="button"
                    >
                      database
                    </button>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Average duration (ms)
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            49.54
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Error rate
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            <div
                              class="euiText euiText--small"
                            >
                              3.77%
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Request rate
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiText euiText--medium"
                        >
                          <div
                            class="euiTextColor euiTextColor--default"
                          >
                            53
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                  style="width: 80px;"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    No. of connected services
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    2
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Connected services
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiText euiText--small"
                    >
                      order, inventory
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Traces
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    31
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Actions
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignCenter euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-flyout-action-btnundefined"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary euiIcon-isLoading"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-traces-redirection-btnundefined"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary euiIcon-isLoading"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            class="euiLink euiLink--primary"
                            data-test-subj="service-logs-redirection-btnundefined"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--primary euiIcon-isLoading"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorUpRight"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                    data-test-subj="tablePaginationPopoverButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        Rows per page
                        : 
                        10
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <nav
                class="euiPagination"
              >
                <button
                  aria-label="Previous page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-previous"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </button>
                <ul
                  class="euiPagination__list"
                >
                  <li
                    class="euiPagination__item"
                  >
                    <button
                      aria-controls="random_html_id"
                      aria-current="true"
                      aria-label="Page 1 of 1"
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                      data-test-subj="pagination-button-0"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonEmpty__content"
                      >
                        <span
                          class="euiButtonEmpty__text"
                        >
                          1
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
                <button
                  aria-label="Next page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-next"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </button>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
